# hanashite

./: .gitignore  README.md
go-hanashite/: .gitignore  Makefile  README.md  audio.go  codec.go  go.mod  go.sum  hanashite.go  pipeline.go
go-hanashite/cmd/dbg-hanashite-client/: main.go
go-hanashite/cmd/go-hanashite-cli/: main.go
go-hanashite/cmd/go-hanashite-server/: main.go
go-hanashite/cmd/go-hanashite-termiu/: main.go
go-hanashite/network/: network.go
go-hanashite/pipeline/: encode.go  pipeline.go  portaudio.go  udp_proc.go  uvmeter.go
go-hanashite/protos/: han.proto
go-hanashite/serialize/: hanmessage.pb.go  udpmessage.pb.go  updmessage.pb.go
rust-hanashite/: Cargo.toml  build.rs
rust-hanashite/examples/: logging.rs
rust-hanashite/hahashite-server/: Cargo.toml
rust-hanashite/hahashite-server/src/: configuration.rs  error.rs  main.rs  server.rs  tcp.rs  udp.rs
rust-hanashite/hahashite-server/src/bus/: mod.rs
rust-hanashite/hahashite-server/src/server/: auth.rs  channel.rs  mod.rs  test.rs
rust-hanashite/hahashite-server/src/tcp/: mod.rs  reader.rs  writer.rs
rust-hanashite/hahashite-server/src/tcp/reader/: auth.rs  channel.rs  mod.rs  test.rs
rust-hanashite/hanashite-message/: Cargo.toml  build.rs
rust-hanashite/hanashite-message/protos/: hanmessage.proto  udpmessage.proto
rust-hanashite/hanashite-message/src/: codec.rs  lib.rs
rust-hanashite/hanashite-message/src/proto/: hanmessage.rs  mod.rs  udpmessage.rs
rust-hanashite/hanashite-message/src/protos/: hanmessage.rs  mod.rs  udpmessage.rs
rust-hanashite/hanashite-message/tests/: login_client.rs
rust-hanashite/src/: configuration.rs  error.rs  main.rs  server.rs
rust-hanashite/src/protos/: mod.rs  udpmessage.rs
rust-hanashite/src/server/: tcp.rs  udp.rs
rust-hanashite/src/server/tcp/: handler.rs  reader.rs  writer.rs
rust-server/: .gitignore  Cargo.toml  build.rs  config.toml
rust-server/examples/: client.rs
rust-server/protos/: hanmessage.proto  updmessage.proto
rust-server/src/: client.rs  clienthandler.rs  configuration.rs  controlserver.rs  lib.rs  main.rs  udphandler.rs  util.rs
rust-server/src/clienthandler/: message.rs
rust-server/src/protos/: hanmessage.rs  mod.rs  udpmessage.rs  updmessage.rs
