[package]
name = "rust-hanashite"
version = "0.1.0"
authors = ["Peter Triller <ptriller@soapwars.de>"]
edition = "2018"

[dependencies]
bytes = "0.6.0"
futures = "0.3.8"
futures-sink = "0.3.8"
serde = "1.0.117"
toml = "0.5.7"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
tokio = { version = "0.3.4", features = ["full", "io-util"] }
tokio-util = { version = "0.5.0", features = ["codec"] }
uuid = { version = "0.8.1", features = ["v4"] }
prost = { git = "https://github.com/danburkert/prost" }
sodiumoxide = "0.2.6"

[dev-dependencies]
tokio-test = "0.3.0"

[build-dependencies]
prost-build = { git = "https://github.com/danburkert/prost" }
