[package]
name = "rust-hanashite"
version = "0.1.0"
authors = ["Peter Triller <ptriller@soapwars.de>"]
edition = "2018"

[dependencies]
bytes = "1.1.0"
futures = "0.3.21"
serde = "1.0.138"
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.14"
tracing-futures = "0.2.5"
tokio = { version = "1.19.2", features = ["full", "io-util"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
uuid = { version = "1.1.2", features = ["v4"] }
prost = "0.10.4"

[dev-dependencies]
tokio-test = "0.4.2"

[build-dependencies]
prost-build = "0.10.4"
