[package]
name = "hanashite-server"
version = "0.1.0"
authors = ["Peter Triller <ptriller@soapwars.de>"]
edition = "2018"

[dependencies]
hanashite-message = { path = "../hanashite-message" }
bytes = "1.0.0"
futures = "0.3.9"
futures-sink = "0.3.9"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5.8"
tracing = "0.1.22"
async-trait = "0.1.42"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
tokio = { version = "1.0.1", features = ["full", "io-util"] }
tokio-stream = "0.1.1"
tokio-util = { version = "0.6.0", features = ["codec"] }
uuid = { version = "0.8.1", features = ["v4"] }
prost = "0.7.0"
sodiumoxide = "0.2.6"

[dev-dependencies]
tokio-test = "0.4.0"
mockall = "0.9.0"
assert_matches = "1.4.0"

[build-dependencies]
prost-build = "0.7.0"
