[package]
name = "hanashite-message"
version = "0.1.0"
authors = ["Peter Triller <ptriller@soapwars.de>"]
edition = "2018"

[dependencies]
bytes = "0.6.0"
futures = "0.3.8"
futures-sink = "0.3.8"
assert_matches = "1.4.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
tokio = { version = "0.3.4", features = ["full", "io-util"] }
tokio-util = { version = "0.5.0", features = ["codec"] }
uuid = { version = "0.8.1", features = ["v4"] }
prost = { git = "https://github.com/danburkert/prost" }

[build-dependencies]
prost-build = { git = "https://github.com/danburkert/prost" }
