[package]
name = "hanashite-message"
version = "0.1.0"
authors = ["Peter Triller <ptriller@soapwars.de>"]
edition = "2018"

[dependencies]
protobuf = "2.20.0"
bytes = "1.0.0"
futures = "0.3.9"
futures-sink = "0.3.9"
assert_matches = "1.4.0"
tracing = "0.1.22"
tracing-subscriber = "0.2.15"
tracing-futures = "0.2.4"
tokio =  { version = "1.0.1", features = ["full", "io-util"] }
tokio-util = { version = "0.6.0", features = ["codec"] }
uuid = { version = "0.8.1", features = ["v4"] }
prost = "0.7.0"

[build-dependencies]
prost-build = "0.7.0"
protoc-rust = "2.20.0"